Tests/Modules/Error/RetryOnly/.build/bareretrycatcher.pr
{
  "name": "BareRetryCatcher",
  "description": null,
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %bareRetryCaught% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%bareRetryCaught%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "guidance": null,
      "level": null,
      "confidence": null,
      "formal": null,
      "source": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Modules/Error/RetryOnly/BareRetryCatcher.goal",
  "prPath": "/Modules/Error/RetryOnly/.build/bareretrycatcher.pr",
  "hash": "721530b5266483f76149d388538696506be500e36c0e32b9216a91de8f854701",
  "builderVersion": "0.2.2",
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}